# sci-parser

./: .gitignore  README.md  pyproject.toml
sci_parser/: parser.py
tests/: __init__.py  test_parser.py
tests/data/: multiwfn-01.txt
